--- a/wp-content/plugins/plugaddons/assets/public/css/main.css
+++ b/wp-content/plugins/plugaddons/assets/public/css/main.css
@@ -173,3 +173,197 @@
     max-width: 70%;
     text-overflow: ellipsis
 }
+
+
+
+/*--------------------
+* Testimonials CSS
+--------------------*/
+.pla-testimonial-box {
+    background-color: #fff;
+    padding: 32px 28px;
+    position: relative;
+    z-index: 1;
+}
+.pla-testimonial-box:after {
+    width: calc(100% - 56px);
+    height: calc(100% - 64px);
+    background: transparent;
+    border: 2px solid #DCDCDC;
+    content: "";
+    position: absolute;
+    left: 28px;
+    top: 32px;
+}
+.pla-testimonial-box .pla-testimonial-box-inner {
+    padding: 65px 11px 26px;
+    text-align: center;
+    position: relative;
+    z-index: 5;
+}
+.pla-testimonial-box .quote-one {
+    position: absolute;
+    left: 60px;
+    top: 15px;
+    width: 0;
+    height: 0;
+    background-color: #fff;
+    z-index: 1;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-one .quote-one {
+    width: 57px;
+    height: 38px;
+}
+.pla-testimonial-box .quote-one:before,
+.pla-testimonial-box .quote-two:before{
+    content: none;
+    position: absolute;
+    left: 8px;
+    top: 0;
+    width: 80%;
+    height: 100%;
+    background-image: url(../img/quote-top.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #fff;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-one .quote-one:before {
+    content: "";
+
+}
+.pla-testimonial-box.pla-testimonial--grid-style-two .quote-one,
+.pla-testimonial-box.pla-testimonial--grid-style-two .quote-two{
+    width: 57px;
+    height: 50px;
+    left: auto;
+    right: 20px;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-two .quote-two {
+    left: 10px;
+    bottom: 17px;
+    background: #fff;
+    position: absolute;
+    z-index: 1;
+    height: 50px;
+    width: 60px;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-two .quote-one:before{
+    content: "";
+    background-image: url(../img/quote-bottom.png);
+    height: 76%;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-two .quote-two:before {
+    content: "";
+    background-image: url(../img/quote-top.png);
+    height: 76%;
+    top: 10px;
+    width: 75%;
+}
+
+.pla-testimonial-box.pla-testimonial--grid-style-two .pla-testimonial-style-one,
+.pla-testimonial-box.pla-testimonial--grid-style-one .pla-testimonial-style-two,
+.pla-testimonial-box.pla-testimonial--grid-style-three .pla-testimonial-style-two,
+.pla-testimonial-box.pla-testimonial--grid-style-four .pla-testimonial-style-two{
+    display: none;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-two .pla-testimonial-box-inner {
+    padding: 53px 11px 26px;
+    text-align: center;
+}
+.pla-testimonial-style-two .pla-author-img {
+    float: left;
+    width: 33.333%;
+}
+
+.pla-testimonial-box.pla-testimonial--grid-style-two .pla-testimonial-box-inner {
+    text-align: left;
+}
+.grid-name.grid-name--grid-style-two {
+    margin: 0;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-three {
+    width: 359.98px;
+    height: 359.98px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-three .pla-testimonial-box-inner {
+    padding-bottom: 0;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-three:after {
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.16);
+    border: none;
+}
+
+.grid-name.grid-name--grid-style-three,
+.grid-name.grid-name--grid-style-four{
+    position: absolute;
+    left: 50%;
+    top: 23px;
+    transform: translateX(-50%);
+}
+
+.grid-name.grid-name--grid-style-three:after,
+.grid-name.grid-name--grid-style-four:after{
+    position: absolute;
+    content: "";
+    background: #ddd;
+    left: 50%;
+    bottom: 0;
+    width: 57px;
+    height: 3px;
+    transform: translateX(-50%);
+}
+.pla-testimonial-box.pla-testimonial--grid-style-four {
+    position: relative;
+    padding: 60px 28px;
+    background-color: transparent;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-four:before {
+    background-image: url(../img/testimonial-four-background.png);
+    background-color: transparent;
+    background-position: center center;
+    background-repeat: no-repeat;
+    padding: 60px 28px;
+    content: "";
+    width: 107%;
+    height: 100%;
+    left: -9px;
+    top: 0;
+    position: absolute;
+    z-index: 1;
+}
+.grid-name.grid-name--grid-style-four:after{
+    background: #fff;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-three .quote-one,
+.pla-testimonial-box.pla-testimonial--grid-style-four .quote-one{
+    position: absolute;
+    left: 50%;
+    top: 52px;
+    z-index: 2;
+    width: 38.29px;
+    height: 39.4px;
+    transform: translateX(-50%);
+    background-image: url("../img/quote-bg.png");
+    transition: all .3s ease-in-out;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-three:hover .quote-one {
+    background-image: url("../img/quote-bg-hover.png");
+}
+.pla-testimonial-box.pla-testimonial--grid-style-four .quote-one {
+    background-image: url(../img/quote-bg-yollow.png);
+    background-color: transparent;
+    z-index: 5;
+}
+.pla-testimonial-box.pla-testimonial--grid-style-four:after {
+    background: url(../img/testimonial-four-forground.png);
+    border: none;
+    background-position: center center;
+    background-repeat: no-repeat;
+    z-index: 2;
+}
+
